--- a/RedeSocial/templates/en/public/Conquistas.html
+++ b/RedeSocial/templates/en/public/Conquistas.html
@@ -1,11 +1,10 @@
 {% extends "en/public/Base.HTML" %}
 <meta charset="utf-8">
 {% block contents %}
-
 <div id="containerAmigos" style="margin-top: 30px;">
 	<div id="containerConquistas">
-		<fieldset>
 			<legend>Conquistas</legend>
+			<hr class="form-hr">
 				<ul>
 					{% for e in insignias %}
 					
@@ -48,16 +47,6 @@
 						{% endif %}
 					{% endfor %}					
 				</ul>
-		
-<!-- <button type="button" id="button1">Hello Server!</button> -->
-<!-- <button type="button" id="button2">div!</button> -->
-
-
-<!-- <script type="text/javascript" src="../static/js/testeHello.js"></script> -->
-<!-- <script type="text/javascript" src="../static/js/teste.js"></script> -->
-
-
-		</fieldset>
 	</div>
 </div>
 {% endblock contents %}
