--- a/RedeSocial/templates/en/public/Ativos.HTML
+++ b/RedeSocial/templates/en/public/Ativos.HTML
@@ -2,51 +2,53 @@
 <meta charset="utf-8">
 <div id="containerAmigos" style="margin-top: 30px;">
 	<div id="containerSolicitacao">
-		<p>{{msg_erro}}</p>		
-		
-				
+		<ul class="ul-pendentes">
 		{% if qtd_d_ativos_desafiados > 0 %}
-		<fieldset>
-			<legend>Desafios Ativos</legend>
-			{% csrf_token %} {% for a in d_ativos_desafiado %}
-				<ul id="ul-cumprir">
-					<div style="background: ; width: 79%; float: left;">						
-						<li>
-							<img src="{{a.usuario_desafiante.foto.url}}" id="imgAmigos">
-						</li>
-						
-						<li style="margin: 7px 15px 15px 15px;">
-							<form name="form" action="buscaPerfilUsuario{{a.usuario_desafiante.id}}" method="post">
-								{% csrf_token %} <input type="submit" value="{{a.usuario_desafiante.nome}}"
-									class="meulink"> <input type="hidden" name="cUsuario"
-									value="{{a.usuario_desafiante.id}}">
-							</form>
-							<div class="form-ano">
-								{{a.usuario_desafiante.turma}}
-							</div>
-						</li>
-						
-						<li style="margin: 19px 0px 0px 0px; float: right;"
-						class="form-ano">
-							{{a.desafio.nome}}: {{a.desafio.pontuacao}} pontos					
-						</li>						
-					</div>
+			<legend>Desafios Ativos:</legend>
 			
-					<form action="cumprir_desafio" method="post">					
+			<hr class="form-hr">
+			
+			{% for a in d_ativos_desafiado %}
+			<li id="li-cumprir">
+				<div class="wrap-btn-pendentes wrap-btn-cumprir">
+					<form action="cumprir_desafio" method="post">
+						<input type="hidden" id="hide-desafio-cumprir" name="id_desafio_ativo" value="{{a.id}}"/>					
 						<button type="submit" id="btn-cumprir-desafio" value="aceitar"
-							class="btn btn-success btn-lg" title="Aceitar solicitação">
-	
-							<input type="hidden" id="hide-desafio-cumprir" name="id_desafio_ativo" value={{a.id}} /> <span
-								class="glyphicon glyphicon-ok"></span> Cumprir
+							class="btn btn-success" title="Aceitar solicitação">
+							<span class="glyphicon glyphicon-ok"></span> Cumprir
 						</button>
-					</form>
-				</ul>
+					</form>	
+				</div>
 				
-				{% endfor %}
-		
-		</fieldset>
+				<div class="wrap-desafio-pontos">
+					<div class="form-ano">
+						{{a.desafio.nome}}: {{a.desafio.pontuacao}} pontos					
+					</div>
+				</div>
+				
+				<div id="wrap-buscado-cumprir">
+					<div id="buscado-pendentes">
+						<form name="form" action="buscaPerfilUsuario{{a.usuario_desafiante.id}}" id="form-busca-usuario-ativos" method="post">
+							{% csrf_token %} 
+							<input type="submit" value="{{a.usuario_desafiante.nome}}"
+									class="meulink"> 
+							<input type="hidden" name="cUsuario"
+								value="{{a.usuario_desafiante.id}}">
+						</form>
+					</div>
+					
+					<div class="form-ano ano-pendentes">
+						{{a.usuario_desafiante.turma}}
+					</div>
+				</div>
+				
+				<div id="img-desafio-pendentes">
+					<img src="{{a.usuario_desafiante.foto.url}}">
+				</div>
+			</li>
+			{% endfor %}
 		{% endif %}
-	
+		</ul>
 	</div>
 </div>
 {% endblock contents %}
