--- a/RedeSocial/templates/en/public/ConsultaPerfil.HTML
+++ b/RedeSocial/templates/en/public/ConsultaPerfil.HTML
@@ -1,153 +1,155 @@
 {% extends "en/public/Base.HTML" %} {% block contents %}
 <meta charset="utf-8">
-	<div id="containerMeuPerfil">
-		<fieldset>
-			<div id="imgMeuPerfil">
-				{% if e.foto.url != '/media/False' %} <img
-					src="{{uBuscado.foto.url}}" /> {% endif %}
-			</div>
-			
-		{%if uBuscado != Usuario %}
-			{% if verificar_amigo == True %}
+	<div id="containerAmigos" style="margin-top: 30px;">
+		<div id="buscado-informacao">
+			<legend>Perfil:</legend>
+				<hr class="form-hr">
 				
-				<form action="desafiar_amigo" method="post">{% csrf_token %} 
-				
-					<input type="hidden" name="id_usuario"	value={{uBuscado.id}}>
+				<div id="btn-editar-perfil" class="btn-buscado">
+					
+				{%if uBuscado != Usuario %}
+					
+					{% if verificar_amigo == True %}
+						
+					<form action="desafiar_amigo" method="post">{% csrf_token %} 
+						<input type="hidden" name="id_usuario"	value="{{uBuscado.id}}">
 						<button type="submit" value="desafiar"
 							class="btn btn-primary btn-lg" title="Desafia um amigo">
 							<span class="glyphicon glyphicon-tint"></span> Desafiar
 						</button>
-				</form>
-				
-				
-			{% elif verificar_amigo == False %}
-				
-				<form action="fazer_amizade" method="post">	{% csrf_token %}									
-					<input type="hidden" name="cFazer_amizade" value='{{uBuscado.id}}'>
-									
-					<div style="background: ; float: right;">	
-						<button type="submit" class="btn btn-primary btn-lg" title="Aceitar solicitação">
-							<span class="glyphicon glyphicon-plus"></span> Fazer amizade
-						</button>
-					</div>
+					</form>
+						
+						
+					{% elif verificar_amigo == False %}
+						
+					<form action="fazer_amizade" method="post">	{% csrf_token %}									
+						<input type="hidden" name="cFazer_amizade" value='{{uBuscado.id}}'>
+							<button type="submit" class="btn btn-primary btn-lg" title="Aceitar solicitação">
+								<span class="glyphicon glyphicon-plus"></span> Fazer amizade
+							</button>
+					</form>
+					{% endif %}
 					
-				</form>
+				{% endif %}
+				</div>
 				
-			{% endif %}
-		{% endif %}	
-					
-			
-			<div id="informacoesPerfil">
-				<table>
-					<tr>
-						<td width="50">
-							<div id="formatacaoForm">Nome:</div>
-						</td>
-	
-						<td><div id="formInformacoes">{{uBuscado.nome}}</div></td>
-					</tr>
-				</table>
-	
-				<table>
-					<tr>
-						<td width="50">
-							<div id="formatacaoForm">Idade:</div>
-						</td>
-	
-						<td><div id="formInformacoes">{{uBuscado.idade}}</div></td>
-					</tr>
-				</table>
-	
-				<table>
-					<tr>
-						<td width="50">
-							<div id="formatacaoForm">Série:</div>
-						</td>
-	
-						<td><div id="formInformacoes">{{uBuscado.turma}}</div></td>
-					</tr>
-				</table>
-	
-				<table>
-					<tr>
-						<td width="50">
-							<div id="formatacaoForm">Sexo:</div>
-						</td>
-	
-						<td><div id="formInformacoes">{{uBuscado.sexo}}</div></td>
-					</tr>
-				</table>
-	
-				<table>
-					<tr>
-						<td width="50">
-							<div id="formatacaoForm">Descrição:</div>
-						</td>
-					</tr>
-				</table>
-	
-				<table>
-					<tr>
-						<td>
-							<div id="containerTexto">{{uBuscado.descricao}}</div>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</fieldset>
-	
-		<fieldset>
-			<legend>Classificação</legend>
-	
-			<table>
-				<tr>
-					<td width="50">
-						<div id="formatacaoForm">Pontuação:</div>
-					</td>
-	
-					<td>{{uBuscado.pontos}} pt.</td>
-				</tr>
-			</table>
-	
-			<table>
-				<tr>
-					<td width="50">
-						<div id="formatacaoForm">Turma:</div>
-					</td>
-	
-					<td>{{pos_turma_u}}º pos.</td>
-				</tr>
-			</table>
-	
-			<table>
-				<tr>
-					<td width="50">
-						<div id="formatacaoForm">Geral:</div>
-					</td>
-	
-					<td>{{pos_geral_u}}º pos.</td>
-				</tr>
-			</table>
-	
-	
-		</fieldset>
-	
-		<fieldset>
+				<div id="imgMeuPerfil">
+					{% if e.foto.url != '/media/False' %} 
+						<img	src="{{uBuscado.foto.url}}"/> 
+					{% endif %}
+				</div>
+				
+				<div id="informacoesPerfil">
+					<table>
+						<tr>
+							<td width="50">
+								<div id="formatacaoForm">Nome:</div>
+							</td>
+		
+							<td><div id="formInformacoes">{{uBuscado.nome}}</div></td>
+						</tr>
+					</table>
+		
+					<table>
+						<tr>
+							<td width="50">
+								<div id="formatacaoForm">Idade:</div>
+							</td>
+		
+							<td><div id="formInformacoes">{{uBuscado.idade}}</div></td>
+						</tr>
+					</table>
+		
+					<table>
+						<tr>
+							<td width="50">
+								<div id="formatacaoForm">Série:</div>
+							</td>
+		
+							<td><div id="formInformacoes">{{uBuscado.turma}}</div></td>
+						</tr>
+					</table>
+		
+					<table>
+						<tr>
+							<td width="50">
+								<div id="formatacaoForm">Sexo:</div>
+							</td>
+		
+							<td><div id="formInformacoes">{{uBuscado.sexo}}</div></td>
+						</tr>
+					</table>
+		
+					<table>
+						<tr>
+							<td width="50">
+								<div id="formatacaoForm">Descrição:</div>
+							</td>
+						</tr>
+					</table>
+		
+					<table>
+						<tr>
+							<td>
+								<div id="containerTexto">{{uBuscado.descricao}}</div>
+							</td>
+						</tr>
+					</table>
+				</div>
+		
+			<div id="badge-informacao">
 			<legend>Badges</legend>
-			
-			
+			<hr class="form-hr">
+			<div id="wrap-badges-buscado">
 			{% for e in conquista %}
 				
 				<div id="imgConquistasBuscado">
-					<img src="{{e.insignia.Imagem.url}}" width="100" height="100" title="{{e.insignia.descricao}}"/>
+					<img src="{{e.insignia.Imagem.url}}" width="60" height="60" title="{{e.insignia.descricao}}"/>
 				</div>
 					
 			{% endfor %}
-			
-		</fieldset>
-	</div>
+			</div>
+		</div>
+		<div id="classificacao-informacao">
+			<legend>Classificação</legend>
+			<hr class="form-hr">
+				<table>
+					<tr>
+						<td width="75">
+							<div id="formatacaoForm">Pontuação:</div>
+						</td>
 		
-<div id="wrap-postagens-buscado" style="margin-top: 30px;">
+						<td><div id="formInformacoes"> {{uBuscado.pontos}} pt.</div></td>
+					</tr>
+				</table>
+		
+				<table>
+					<tr>
+						<td width="50">
+							<div id="formatacaoForm">Turma:</div>
+						</td>
+		
+						<td><div id="formInformacoes">{{pos_turma_u}}º pos.</div></td>
+					</tr>
+				</table>
+		
+				<table>
+					<tr>
+						<td width="50">
+							<div id="formatacaoForm">Geral:</div>
+						</td>
+		
+						<td><div id="formInformacoes">{{pos_geral_u}}º pos.</div></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="clear"> </div>
+	</div>
+
+<div id="linha-do-tempo">Linha do Tempo</div>
+		
+<div id="wrap-postagens-buscado">
 	
 		{% for e in postagens_usuario %} 
 		
@@ -168,7 +170,7 @@
 	
 	{% endif %}
 		
-		<form name="form" action="buscaPerfilUsuario{{e.usuario.id}}" method="post" style="margin-top: 2px;">
+		<form name="form" action="buscaPerfilUsuario{{e.usuario.id}}" id="form-busca-usuario" method="post" style="margin-top: 2px;">
 			{% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
 				class="meulink"> <input type="hidden" name="cUsuario"
 				value="{{e.usuario.id}}"> <font id="containerData">{{e.date|date:"D d M Y"}}</font> 
@@ -183,82 +185,61 @@
 		</div>
 		
 		<table cellpadding="0" cellspacing="0">
-				<tr>
-					<td style="background:  ; padding-left: 42px;">	
-					  {% if e.curtiu == True %}		
+			<tr>
+				<td style="background:  ; padding-left: 42px;">	
+					{% if e.curtiu == True %}		
 					  			   		
-				    	<a href="#" class="deslike">
-					       <button type="submit" value="excluir" class="curtir" title="Curtir" 
+				    <a href="#" class="deslike">
+						<button type="submit" value="excluir" class="curtir" title="Curtir" 
 							style="background: transparent; border: none; float: right;">
-								<img alt="curtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
-							</button>
-							<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
-						</a>	
+							<img alt="curtir" src="../static/imagens/pingo.png" width="10" height="13" style="margin-top: 3px;">
+						</button>
+						<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+					</a>	
 					   
-				      {% elif e.curtiu == False %}
+				    {% elif e.curtiu == False %}
 					
-					  	<a href="#" class="like">
-					       <button type="submit" value="excluir" class="curtir" title="Curtir" 
+					<a href="#" class="like">
+						<button type="submit" value="excluir" class="curtir" title="Curtir" 
 							style="background: transparent; border: none; float: right;">
-								<img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
-							</button>
-							<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
-						</a>	
-						
-				   	</td>
-				   	
-		 			{% endif %}
-		 			
-					<td style="background:  ;">
-						<form action="usuarios_curtiram" id="form-u-curtiu" method="post"> {% csrf_token %} 
-							<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
-							<input type="hidden" id="hide-u-curtiu" name="cID_post" value="{{e.id}}">
-						</form>
-					</td>
-	
-					<td style="background: ;">
-						<form action="visualizarComentarios" id="form-comentarios" method="post">
-						{% csrf_token %} 
-							<input type="hidden" id="hide-comentarios" name="cPost" value="{{e.id}}">
-							<input type="submit" name="comentarios" value="Comentários ({{e.qtd_coments}})" class="linkPostagem">
-						</form>
-					</td>
-				</tr>
-			</table>
+							<img alt="curtir" src="../static/imagens/despingo.png" width="10" height="13" style="margin-top: 3px;">
+						</button>
+						<input type="hidden" id="hide" name="cID_post" value="{{e.id}}">   
+					</a>	
+				</td>
 
-		<form action="postarComentarios" id="postar-comentario" method="post">
-			{% csrf_token %}
-			<hr
-				style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+				{% endif %}
+				
+				<td style="background:  ;">
+					<!-- código modal -->
+					<form action="usuarios_curtiram" id="abrir-modal" method="post"> {% csrf_token %} 
+						<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
+						<input type="hidden" id="hide-u-curtiu" name="cID_post" value="{{e.id}}">
+					</form><!-- FIM código modal -->
+				</td>
 
-			<div id="enviarPost">
-				<table>
-					<tr>
-						<td style="background: ; width: 100%; height: 0px ">
-			
-				<textarea name="cComentario" class="formTextAreaTimeLine"
-					placeholder="Escreva um comentário..."></textarea>		
-
-						</td>
-						
-						<td style="margin-left: 10px; background: ; width: 50px;">
-						
-							<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
-							<button style="float: right;" class="btn btn-enviaComent">
-								<span class="glyphicon glyphicon-share-alt"></span>
-							</button>
-							
-						</td>
-					</tr>
-				</table>
+				<td style="background: ;">
+					<form action="visualizarComentarios" id="form-comentarios" method="post">
+					{% csrf_token %} 
+						<input type="hidden" id="hide-comentarios" name="cPost" value="{{e.id}}">
+						<input type="submit" name="comentarios" value="Comentários ({{e.qtd_coments}})" class="linkPostagem">
+					</form>
+				</td>
+			</tr>
+		</table>
+			<div class="footer-postagem">
+				<div class="comentario-postagem">
+					<form action="postarComentarios" id="postar-comentario" method="post">
+					{% csrf_token %}
+						<input type="text" class="input-comentario" placeholder="Deixe seu comentário.." required/><button class="button-comentario"><span class="glyphicon glyphicon-send"></span></button>
+						<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}"/> 
+					</form>				
+				</div>
 			</div>
-		</form>
-		
 	</div>
 
-<!-- ############################ Fim - Postagem normal ############################### -->
-
-	  {% elif e.desafio == True %}
+<!-- ############################ Fim - Postagem normal #################################### -->
+	{% elif e.desafio == True %}
 	
 <!-- ############################ Postagem desafio #################################### -->
 	
@@ -275,7 +256,7 @@
 
     {% endif %}
 
-       <form name="form" action="buscaPerfilUsuario{{e.usuario.id}}" method="post" style="margin-top: 2px;">
+       <form name="form" action="buscaPerfilUsuario{{e.usuario.id}}"  id="form-busca-usuario-desafio" method="post" style="margin-top: 2px;">
             {% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
                 class="meulink"> <input type="hidden" name="cUsuario"
                 value="{{e.usuario.id}}"> 
@@ -284,7 +265,7 @@
                     {{e.date|date:"D d M Y"}}
                     
                     {% if e.nome_desafio != None %}
-                        <font class="meulink" style="margin-left: 55px;"><span class="form-class-nome">Desafio: </span>{{e.nome_desafio}}</font>
+                        <font style="float: right; margin-right: 35px; margin-top: 6px;">{{e.nome_desafio}}</font>
                     {% endif %}
                 </font>
         </form>
@@ -324,10 +305,11 @@
             {% endif %}
             
             <td style="background:  ;">
-				<form action="usuarios_curtiram" id="form-u-curtiu-desafio" method="post"> {% csrf_token %} 
+				<!-- código modal -->
+				<form action="usuarios_curtiram" id="abrir-modal-desafio" method="post"> {% csrf_token %} 
 					<input type="submit" id="id{{e.id}}" value="({{e.qtd_pingo}})" class="u-curtidas">
 					<input type="hidden" id="hide-u-curtiu" name="cID_post" value="{{e.id}}">
-				</form>
+				</form><!-- FIM código modal -->
 			</td>
 
 			<td style="background: ;">
@@ -338,32 +320,17 @@
 				</form>
 			</td>
           </tr>
-      </table>
-
-        <form action="postarComentarios" id="postar-comentario-desafio" method="post">
-          {% csrf_token %}
-          <hr style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
-
-          <div id="enviarPost">
-            <table>
-              <tr>
-                <td style="background: ; width: 100%; height: 0px ">
-                  <textarea name="cComentario" class="formTextAreaTimeLine"
-                    placeholder="Escreva um comentário..."></textarea>    
-                </td>
-                
-                <td style="margin-left: 10px; background: ; width: 50px;">
-                  <input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
-                  <button style="float: right;" class="btn btn-enviaComent">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                  </button>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </form>
+      </table>			
+			<div class="footer-postagem">
+				<div class="comentario-postagem">
+					<form action="postarComentarios" id="postar-comentario-desafio" method="post">
+					{% csrf_token %}
+						<input type="text" class="input-comentario" placeholder="Deixe seu comentário.." required/><button class="button-comentario"><span class="glyphicon glyphicon-send"></span></button>
+						<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}"/> 
+					</form>				
+				</div>
+			</div>
     </div>
-    
 <!-- ############################ Fim - Postagem desafio #################################### -->
 
     {% endif %} 
