--- a/RedeSocial/templates/en/public/Pendentes.HTML
+++ b/RedeSocial/templates/en/public/Pendentes.HTML
@@ -2,69 +2,65 @@
 <meta charset="utf-8">
 <div id="containerAmigos" style="margin-top: 30px;">
   <div id="containerSolicitacao">
-    <p>{{msg_erro}}</p>   
-    
-    {% if soli_desafios > 0 %}
-    <fieldset>
-      <legend>Solicitações de Desafios</legend>
-
-      {% for e in solicit_desafios %}
-      <ul id="pendentes-{{e.id}}" class="pendentes">
-        <div style="background:; width: 79%; float: left;">
-          <li>
-            <img src="{{e.usuario_desafiante.foto.url}}" id="imgAmigos"/>
-          </li>
-          
-          <li style="margin: 7px 15px 15px 15px;">
-            <form name="form" action="buscaPerfilUsuario{{e.usuario_desafiante.id}}" method="post">
-              {% csrf_token %} <input type="submit" value="{{e.usuario_desafiante.nome}}"
-                class="meulink"> <input type="hidden" name="cUsuario"
-                value="{{e.usuario_desafiante.id}}">
-            </form>
-            <div class="form-ano">
-              {{e.usuario_desafiante.turma}}
-            </div>
-          </li>
-
-          <li style="margin: 19px 0px 0px 0px; float: right;"
-            class="form-ano">
-            {{e.desafio.nome}}: {{e.desafio.pontuacao}} pontos          
-          </li>
-        </div>
-
-          <input type="hidden" id="hide-id-usuario-recusar" name="cPedido_usuario_id" value={{e.usuario_desafiante.id}} /> 
-          
-          <input type="hidden" id="hide-id-desafio-recusar" name="cPedido_desafio_id" value={{e.desafio.id}} /> 
-          
-          <input  type="hidden" id="hide-id-pedido-recusar" name="cPedido_id" value={{e.id}} /> 
-          
-          <input  type="hidden" id="hide-id-solicitacao-recusar" name="cPedido_solicitacao" value="False" />
-
-          <button type="submit" value="recusar" class="btn btn-danger btn-lg btn-recusar" id="btn-recusar-{{e.id}}" title="Recusar solicitação">
-            <span class="glyphicon glyphicon-remove"></span>
-          </button>
+    	<legend>Solicitações de Desafios:</legend>
       
-
+      	<hr class="form-hr">
+      	{% if soli_desafios > 0 %}
+      	<ul id="pendentes-{{e.id}}" class="ul-pendentes">
       
-          <input type="hidden" id="hide-id-usuario" name="cPedido_usuario_id" value={{e.usuario_desafiante.id}} /> 
-          
-          <input type="hidden" id="hide-id-desafio" name="cPedido_desafio_id" value={{e.desafio.id}} /> 
-          
-          <input  type="hidden" id="hide-id-pedido" name="cPedido_id" value={{e.id}} /> 
-          
-          <input  type="hidden" id="hide-id-solicitacao" name="cPedido_solicitacao" value=True />
-
-          <button type="submit" value="aceitar"
-            class="btn btn-success btn-lg btn-aceitar" id="btn-aceitar-{{e.id}}" title="Aceitar solicitação">
-            <span class="glyphicon glyphicon-ok"></span>
-          </button>
-      </ul>
-      
+      	{% for e in solicit_desafios %}
+	      	<li id="li-pendentes">
+	      		<div class="wrap-btn-pendentes">
+	      			<input type="hidden" id="hide-id-usuario" name="cPedido_usuario_id" value="{{e.usuario_desafiante.id}}"/> 	          
+	          		<input type="hidden" id="hide-id-desafio" name="cPedido_desafio_id" value="{{e.desafio.id}}"/> 	          
+	          		<input type="hidden" id="hide-id-pedido" name="cPedido_id" value="{{e.id}}"/> 	          
+	          		<input type="hidden" id="hide-id-solicitacao" name="cPedido_solicitacao" value="True"/>
+	
+	          		<button type="submit" value="aceitar"
+	            		class="btn btn-success btn-lg btn-aceitar" id="btn-aceitar-{{e.id}}" title="Aceitar solicitação">
+	            		<span class="glyphicon glyphicon-ok"></span>
+	          		</button>
+	          		
+	          		<input type="hidden" id="hide-id-usuario-recusar" name="cPedido_usuario_id" value="{{e.usuario_desafiante.id}}" /> 
+	        	    <input type="hidden" id="hide-id-desafio-recusar" name="cPedido_desafio_id" value="{{e.desafio.id}}" /> 	          
+	          		<input type="hidden" id="hide-id-pedido-recusar" name="cPedido_id" value="{{e.id}}" /> 	          
+	          		<input type="hidden" id="hide-id-solicitacao-recusar" name="cPedido_solicitacao" value="False" />
+	
+	          		<button type="submit" value="recusar" class="btn btn-danger btn-lg btn-recusar" id="btn-recusar-{{e.id}}" title="Recusar solicitação">
+	           			<span class="glyphicon glyphicon-remove"></span>
+	          		</button>
+	        	</div>
+	        	
+	        	<div class="wrap-desafio-pontos">
+		        	<div class="form-ano">
+		            	{{e.desafio.nome}}: {{e.desafio.pontuacao}} pontos   
+		          	</div>       
+		        </div>
+		        
+		        <div id="wrap-buscado-cumprir" >
+			        <div id="buscado-pendentes">
+		            	<form name="form" action="buscaPerfilUsuario{{e.usuario_desafiante.id}}" id="form-busca-usuario-pendentes" method="post">
+		              		{% csrf_token %} 
+		              		<input type="submit" value="{{e.usuario_desafiante.nome}}"
+		                		class="meulink"> 
+		                	<input type="hidden" name="cUsuario"
+		                		value="{{e.usuario_desafiante.id}}">
+		            	</form>
+		        	</div>
+		        	
+		        	<div class="form-ano ano-pendentes">
+			       		{{e.usuario_desafiante.turma}}
+			       	</div>
+		       	</div>
+		       	
+	        	<div id="img-desafio-pendentes">
+	            	<img src="{{e.usuario_desafiante.foto.url}}"/>
+	         	</div>
+	  		</li>
       {% endfor %}
-    </fieldset>
+      </ul>
+      <div class="clear"></div>
     {% endif %}
-    
-  
   </div>
 </div>
 {% endblock contents %}
