--- a/RedeSocial/templates/en/public/Pesquisa_Amigos.HTML
+++ b/RedeSocial/templates/en/public/Pesquisa_Amigos.HTML
@@ -1,73 +1,80 @@
 {% extends "en/public/Base.html" %} {% block contents %}
 <meta charset="utf-8">
-<div id="containerPesquisa">
-	<form action="pesquisa" method="post">
+<div id="container-pesquisa">
+	<div id="containerCheckbox">
+	<form action="pesquisa" id="form-pesquisa" method="post">
 		{% csrf_token %}
-		<div id="containerCheckbox">
-			<ul>
-				<li class="checkboxPesquisa"><label> <input
-						type="checkbox" name="checkbox_Todos" value="True"> Todos
-				</label></li>
-
-				<li class="checkboxPesquisa"><label> <input
-						type="checkbox" name="checkbox_Amigos" value="True" checked>
-						Amigos
-				</label></li>
-			</ul>
-		</div>
-		<div class="col-xs-6">
-			<div class="input-group">
-				<input type="text" class="form-control" size="69%" name="cPesquisar"
-					placeholder="Procure seus amigos.."> <span
-					class="input-group-addon">
-					<button type="submit"
-						style="background: transparent; border: none; cursor: pointer; outline: none;">
-						<span class="glyphicon glyphicon-search"></span>
-					</button>
-				</span>
-			</div>
-		</div>
+		<ul>
+			<li class="checkboxPesquisa">
+				<label><input type="checkbox" name="checkbox_Todos" value="True" checked="checked"> Todos</label>
+			</li>
+	
+			<li class="checkboxPesquisa">
+				<label><input type="checkbox" name="checkbox_Amigos" value="True"> Amigos</label>
+			</li>
+		</ul>
+	</div>
+			
+	<div class="wrap-pesquisa">
+		<input type="text" class="input-pesquisa" name="cPesquisar" placeholder="Procure seus amigos.." /><button class="button-pesquisa"><span class="glyphicon glyphicon-search"></span></button>
+	</div>
 	</form>
 </div>
 
-<div id="containerAmigos">
-	<div id="containerSolicitacao">
-		{% if msg_erro != " "%} {{msg_erro}} {% endif %}
-
-		<fieldset>
-
+<div id="wrap-resultado-pesquisa">
+	<div id="containerAmigos">
+		<div id="containerSolicitacao">	
+			{% if msg_erro != " "%} {{msg_erro}} {% endif %}
+	
 			<legend>Resultado pesquisa "amigos":</legend>
-			{% block content %} {% for a in Pesquisa_Concluida %} {% csrf_token %}
-			<ul>
-				<div style="background:; width: 79%; float: left;">
-					<li><img src="{{a.amigo.foto.url}}" id="imgAmigos" /></li>
-
-					<li style="margin: 7px 15px 15px 15px;">
-						<form name="form" action="buscaPerfilUsuario{{a.amigo.id}}" method="post">
-							{% csrf_token %} <input type="submit" value="{{a.amigo.nome}} "
-								class="meulink"> <input type="hidden" name="cUsuario"
-							value="{{a.amigo.id}}">
-						</form>
-						<div class="form-ano">{{a.amigo.turma}}</div>
-					</li>
-
-					<li style="margin: 19px 35px 0px 0px; float: right;"
-						class="form-ano">{{a.amigo.pontos}} pontos</li>
-				</div>
-
-				<form action="desafiar_amigo" method="post">
-					{% csrf_token %} <input type="hidden" name="id_usuario"
-						value={{a.amigo.id}}>
-					<button type="submit" value="desafiar"
-						class="btn btn-primary btn-lg" title="Desafia um amigo">
-						<span class="glyphicon glyphicon-tint"></span> Desafiar
-					</button>
-				</form>
-
-			</ul>
+			<hr class="form-hr">
+			{% block content %} 
 			
-			{% endfor %} {% endblock %}
-		</fieldset>
+			<ul class="ul-pendentes">
+			{% for a in Pesquisa_Concluida %}
+				<li id="li-pesquisa-amigos">
+					<div style="margin-right: 5px;">
+						<div class="wrap-btn-pendentes wrap-btn-cumprir" >
+							<form action="desafiar_amigo" method="post">
+								{% csrf_token %} 
+								<input type="hidden" id="hide-desafio-pesquisa" name="id_usuario"
+									value="{{a.amigo.id}}">
+								<button type="submit" value="desafiar"
+									class="btn btn-primary btn-lg btn-desafiar-amigo" title="Desafia um amigo">
+									<span class="glyphicon glyphicon-tint"></span> Desafiar
+								</button>
+							</form>
+						</div>
+					
+						<div class="wrap-desafio-pontos">
+							<div class="form-ano">
+								{{a.amigo.pontos}} pontos
+							</div>
+						</div>
+						
+						<div id="wrap-buscado-cumprir">
+							<div id="buscado-pendentes">
+								<form name="form" action="buscaPerfilUsuario{{a.amigo.id}}" id="form-busca-usuario-pesquisa-amigos" method="post">
+									{% csrf_token %} <input type="submit" value="{{a.amigo.nome}} "
+									class="meulink"> <input type="hidden" name="cUsuario"
+									value="{{a.amigo.id}}">
+								</form>
+							</div>
+							
+							<div class="form-ano ano-pendentes">
+								{{a.amigo.turma}}
+							</div>
+						</div>
+						
+						<div id="img-desafio-pendentes">
+							<img src="{{a.amigo.foto.url}}"/>
+						</div>	
+					</div>	
+				</li>
+				{% endfor %} 
+			</ul>
+			{% endblock %}
+		</div>
 	</div>
 </div>
 
