--- a/RedeSocial/templates/en/public/Visualizar_Postagem_Desafio.HTML
+++ b/RedeSocial/templates/en/public/Visualizar_Postagem_Desafio.HTML
@@ -1,54 +1,55 @@
 {% extends "en/public/Base.HTML" %} {% block contents %}
 <meta charset="utf-8">
 <div id="verificar-desafio">
-  <div id="containerFeed2" style="margin-top: 30px;">
-    {% block content %}
-    <div class="containerPostagem" style="padding-bottom: 30px;">
+	<div id="containerFeed2" style="margin-top: 30px;">
+		{% block content %}
+	    <div class="containerPostagem">
+	
+	     	<form name="form" action="buscaPerfilUsuario{{desafio.usuario_desafiado.id}}" method="post" style="margin-top: 2px;">
+	        	{% csrf_token %} 
+	        	<input type="submit" id="usuario-cumprido" value="{{desafio.usuario_desafiado.nome}}" class="meulink"> 
+	        	<input type="hidden" name="cUsuario" value="{{desafio.usuario_desafiado.id}}"> 
 
-      <form name="form" action="buscaPerfilUsuario{{desafio.usuario_desafiado.id}}" method="post" style="margin-top: 2px;">
-        {% csrf_token %} 
-        <input type="submit" id="usuario-cumprido" value="{{desafio.usuario_desafiado.nome}}" class="meulink"> 
-        <input type="hidden" name="cUsuario" value="{{desafio.usuario_desafiado.id}}"> 
-        <font id="containerData">
-        	{{desafio.postagem.date|date:"D d M Y"}}
-        	
-        	{% if desafio.desafio.nome != None %}
-            	<font class="meulink" style="margin-left: 55px;"><span class="form-class-nome">Desafio: </span>{{desafio.desafio.nome}}</font>
-            {% endif %}
-        </font> 
-      </form>
-
-      <div id="containerTextoPostagem">
-        {{desafio.postagem.text}}  {% if desafio.postagem.foto.url != "/media/False" %}
-          <center>
-            <img src="{{desafio.postagem.foto.url}}" width="500" height="390" style="margin-top: 15px;" />
-          </center>
-        {% endif %}
-      </div> 
-  
-      <hr style="margin: 0px 15px 5px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
-  
-      <div id="enviarPost">
-  
-        <form action="atribuir_desafio" id="form-recusar-desafio" method="post">
-          {% csrf_token %} 
-          	<input type="hidden" name="cId_usuario" value="{{desafio.usuario_desafiado.id}}"/> 
-            <input type="hidden" name="cId_desafio_ativo" value="{{desafio.id}}"/> 
-            <input type="hidden" name="cValor" value="False"/> 
-            <input type="submit" id="btn-recusar-desafio" name="Enviar" value="Recusar" class="btn btn-primary" />
-        </form>
-  
-        <form action="atribuir_desafio" id="form-atribuir-desafio" method="post">
-          {% csrf_token %} 
-          	<input type="hidden" name="cId_usuario" value="{{desafio.usuario_desafiado.id}}"/> 
-            <input type="hidden" name="cId_desafio_ativo" value="{{desafio.id}}"/> 
-            <input type="hidden" name="cValor" value="True"/> 
-            <input type="submit" id="btn-atribuir-desafio" name="Enviar" value="Atribuir" class="btn btn-primary" />
-        </form>
-      </div>
-  
-    </div>
-    {% endblock %}
-  </div>
+	       		<font id="containerData">
+                    {{desafio.postagem.date|date:"D d M Y"}}
+                    
+                    {% if desafio.desafio.nome != None %}
+                        <font style="float: right; margin-right: 35px; margin-top: 6px;">{{desafio.desafio.nome}}</font>
+                    {% endif %}
+                </font>
+	      </form>
+	
+	      <div id="containerTextoPostagem">
+	        	{{desafio.postagem.text}}  {% if desafio.postagem.foto.url != "/media/False" %}
+	          	<center>
+	           		<img src="{{desafio.postagem.foto.url}}" width="500" height="390" style="margin-top: 15px;" />
+	          	</center>
+	        	{% endif %}
+	      </div> 
+	  
+	  	  <div class="footer-lancar">
+	  	  		<div class="wrap-btn-lancar">
+			        <form action="atribuir_desafio" id="form-atribuir-desafio" method="post">
+			          {% csrf_token %} 
+			          	<input type="hidden" name="cId_usuario" value="{{desafio.usuario_desafiado.id}}"/> 
+			            <input type="hidden" name="cId_desafio_ativo" value="{{desafio.id}}"/> 
+			            <input type="hidden" name="cValor" value="True"/> 
+			            <input type="submit" id="btn-atribuir-desafio" name="Enviar" value="Atribuir" class="btn btn-primary" />
+			        </form>
+	     		</div>
+	     		
+				<div class="wrap-btn-lancar">
+			        <form action="atribuir_desafio" id="form-recusar-desafio" method="post">
+			          {% csrf_token %} 
+			          	<input type="hidden" name="cId_usuario" value="{{desafio.usuario_desafiado.id}}"/> 
+			            <input type="hidden" name="cId_desafio_ativo" value="{{desafio.id}}"/> 
+			            <input type="hidden" name="cValor" value="False"/> 
+			            <input type="submit" id="btn-recusar-desafio" name="Enviar" value="Recusar" class="btn btn-primary" />
+			        </form>
+			    </div>
+	      	</div>
+	    </div>
+	    {% endblock %}
+	</div>
 </div>
 {% endblock contents %}
